implement email notifications, moderation update mail layouts add support mot multiple UI languages
