# internal/api/restapi/handlers/config.go
@@ -8,6 +8,7 @@ import (
 	"gitlab.com/comentario/comentario/internal/config"
 	"gitlab.com/comentario/comentario/internal/data"
 	"gitlab.com/comentario/comentario/internal/util"
+	"golang.org/x/text/language/display"
 	"sort"
 )
 
@@ -26,14 +27,26 @@ func ComentarioConfig(api_general.ComentarioConfigParams) middleware.Responder {
 		return idps[i].ID < idps[j].ID
 	})
 
+	// Prepare a languages slice
+	var langs []*models.UILanguage
+	for _, l := range util.UILanguageTags {
+		langs = append(langs, &models.UILanguage{
+			ID:          l.String(),
+			NameEnglish: display.English.Languages().Name(l),
+			NameNative:  display.Self.Name(l),
+		})
+	}
+
 	// Succeeded
 	return api_general.NewComentarioConfigOK().WithPayload(&models.ComentarioConfig{
 		BaseURL:          config.BaseURL.String(),
 		BuildDate:        strfmt.DateTime(config.BuildDate),
+		DefaultLangID:    util.UIDefaultLangID,
 		FederatedIdps:    idps,
 		NewOwnersAllowed: config.CLIFlags.AllowNewOwners,
 		ResultPageSize:   util.ResultPageSize,
 		SignupAllowed:    config.CLIFlags.AllowSignups,
+		UILanguages:      langs,
 		Version:          config.AppVersion,
 	})
 }
